implementing tpc.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>SouFUNStudio</title>
-  <meta name="description" content="The true fun of make games">
+  <meta name="description" content="The fun of make games">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="keywords" content="videogames, games, soufunstudio, studio, videogamestudio, mexico, fungames, gameonline, playgame, play, fun">
   <meta name="author" content="German David Perez Morales, Roberto T. Jimenez">
