implementing tpc.html

--- a/frontend/games/tpc.html
+++ b/frontend/games/tpc.html
@@ -48,25 +48,25 @@
           <!-- Left -->
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link waves-effect" href="https://kodoku-shinku.github.io/index.html">Games</a>
+              <a class="nav-link waves-effect" href="/index.html">Games</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link waves-effect" href="about.html">About us</a>
+              <a class="nav-link waves-effect" href="/about.html">About us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link waves-effect" href="projects.html">Projects</a>
+              <a class="nav-link waves-effect" href="/projects.html">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link waves-effect" href="services.html">Services</a>
+              <a class="nav-link waves-effect" href="/services.html">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link waves-effect" href="blog.html">Blog</a>
+              <a class="nav-link waves-effect" href="/blog.html">Blog</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link waves-effect" href="store.html">Store</a>
+              <a class="nav-link waves-effect" href="/store.html">Store</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link waves-effect" href="contact.html">Contact</a>
+              <a class="nav-link waves-effect" href="/contact.html">Contact</a>
             </li>
             <!-- Dropdown -->
             <li class="nav-item dropdown">
