implementing tpc.html

--- a/frontend/games/tpc.html
+++ b/frontend/games/tpc.html
@@ -309,7 +309,7 @@
               <a href="https://mail.google.com/mail/u/0/#inbox?compose=new" target="_blank">contact@soufunstudio.com</a>
             </li>
             <li>
-              <a href="contact.html">Av. San Francisco Tlaltenco
+              <a href="/contact.html">Av. San Francisco Tlaltenco
                 Ciudad de México, Cd. de México</a>
             </li>
           </ul>
@@ -322,16 +322,16 @@
           <h5>SouFunStudio</h5>
           <ul class="list-unstyled hoverable-text">
             <li>
-              <a href="frontend/commons/privacy_policy.html">Privacy policy</a>
+              <a href="/frontend/commons/privacy_policy.html">Privacy policy</a>
             </li>
             <li>
-              <a href="frontend/commons/terms_of_use.html">Terms of use</a>
+              <a href="/frontend/commons/terms_of_use.html">Terms of use</a>
             </li>
             <li>
-              <a href="contact.html">Sitemap</a>
+              <a href="/contact.html">Sitemap</a>
             </li>
             <li>
-              <a href="frontend/info/faqs.html">FAQ</a>
+              <a href="/frontend/info/faqs.html">FAQ</a>
             </li>
           </ul>
         </div>
@@ -348,7 +348,7 @@
           <a href="http://soufunstudio.com">© 2020 Copyright: soufunstudio.com</a>
         </li>
         <li class="list-inline-item">
-          <img src="img/soufun-solid-logo.png" class="img-fluid" alt="soufun-solid-logo"></a>
+          <img src="/img/soufun-solid-logo.png" class="img-fluid" alt="soufun-solid-logo"></a>
         </li>
         <li class="list-inline-item">
           <a href="https://scripts.sil.org/cms/scripts/page.php?site_id=nrsi&id=OFL" target="_blank">Sen font is licensed under the OFL.</a>
