implementing tpc.html

--- a/frontend/games/tpc.html
+++ b/frontend/games/tpc.html
@@ -322,16 +322,16 @@
           <h5>SouFunStudio</h5>
           <ul class="list-unstyled hoverable-text">
             <li>
-              <a href="/frontend/commons/privacy_policy.html">Privacy policy</a>
+              <a href="../commons/privacy_policy.html">Privacy policy</a>
             </li>
             <li>
-              <a href="/frontend/commons/terms_of_use.html">Terms of use</a>
+              <a href="../commons/terms_of_use.html">Terms of use</a>
             </li>
             <li>
               <a href="/contact.html">Sitemap</a>
             </li>
             <li>
-              <a href="/frontend/info/faqs.html">FAQ</a>
+              <a href="../info/faqs.html">FAQ</a>
             </li>
           </ul>
         </div>
