implementing tpc.html

--- a/frontend/games/tpc.html
+++ b/frontend/games/tpc.html
@@ -24,7 +24,7 @@
   <link rel="stylesheet" href="/css/mdb.min.css">
   <!-- Plugin CSS -->
   <link rel="stylesheet" href="/device-mockups/device-mockups.min.css">
-  <!-- Your custom styles (optional) -->
+  <!-- Custom styles -->
   <link rel="stylesheet" href="/css/style.css">
 </head>
 
@@ -165,20 +165,10 @@
                   <div class="device-mockup iphone6_plus portrait white">
                     <div class="device">
                       <div class="screen">
-                        <img class="img-fluid rounded-left" src="/img/tpc-screen.jpg" alt="project image">
+                        <img src="/img/tpc-screen.jpg" class="img-fluid rounded-left" alt="tpc-screen">
                       </div>
                     </div>
                   </div>
-                </div>
-
-                <div class="col-md-4">
-                  <img src="/img/tpc-screen-pets.jpg" alt="screen-pets">
-                </div>
-                <div class="col-md-4 p-1">
-                  <img src="/img/tpc-screen-menu.jpg" alt="screen-menu">
-                </div>
-                <div class="col-md-4 p-1">
-                  <img src="/img/tpc-screen-play.jpg" alt="screen-play">
                 </div>
               </div>
 
