--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <!-- Material Design Bootstrap -->
   <link rel="stylesheet" href="css/mdb.min.css">
-  <!-- Your custom styles (optional) -->
+  <!-- Custom styles -->
   <link rel="stylesheet" href="css/style.css">
 </head>
 
