--- a/frontend/games/tpc.html
+++ b/frontend/games/tpc.html
@@ -160,7 +160,7 @@
 
             <div class="row">
 
-              <div class="col-md-8 p-1">
+              <div class="col-md-5 p-1">
                 <div class="device-container">
                   <div class="device-mockup iphone6_plus portrait white">
                     <div class="device">
@@ -169,6 +169,15 @@
                       </div>
                     </div>
                   </div>
+                </div>
+                <div class="col-md-3 p-1">
+                  <img src="/img/tpc-menu.jpg" class="img-fluid rounded-left" alt="tpc-menu">
+                </div>
+                <div class="col-md-3 p-1">
+                  <img src="/img/tpc-pets.jpg" class="img-fluid rounded-left" alt="tpc-pets">
+                </div>
+                <div class="col-md-3 p-1">
+                  <img src="/img/tpc-play.jpg" class="img-fluid rounded-left" alt="tpc-play">
                 </div>
               </div>
 
