implementing tpc.html view

--- a/frontend/games/tpc.html
+++ b/frontend/games/tpc.html
@@ -171,13 +171,13 @@
                   </div>
                 </div>
                 <div class="col-md-3 p-1">
-                  <img src="/img/tpc-menu.jpg" class="img-fluid rounded-left" alt="tpc-menu">
+                  <img src="/img/tpc-screen-menu.jpg" class="img-fluid rounded-left" alt="screen-menu">
                 </div>
                 <div class="col-md-3 p-1">
-                  <img src="/img/tpc-pets.jpg" class="img-fluid rounded-left" alt="tpc-pets">
+                  <img src="/img/tpc-screen-pets.jpg" class="img-fluid rounded-left" alt="screen-pets">
                 </div>
                 <div class="col-md-3 p-1">
-                  <img src="/img/tpc-play.jpg" class="img-fluid rounded-left" alt="tpc-play">
+                  <img src="/img/tpc-screen-play.jpg" class="img-fluid rounded-left" alt="screen-play">
                 </div>
               </div>
 
