implementing tpc.html view

--- a/frontend/games/tpc.html
+++ b/frontend/games/tpc.html
@@ -158,9 +158,9 @@
 
           <div class="card mb-4">
 
-            <div class="row">
+            <div class="row elegant-color-dark">
 
-              <div class="col-md-5 p-1">
+              <div class="col-md-5">
                 <div class="device-container">
                   <div class="device-mockup iphone6_plus portrait white">
                     <div class="device">
@@ -170,13 +170,15 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-md-3 p-1">
+              </div>
+              <div class="container">
+                <div class="col-md-3">
                   <img src="/img/tpc-screen-menu.jpg" class="img-fluid rounded-left" alt="screen-menu">
                 </div>
-                <div class="col-md-3 p-1">
+                <div class="col-md-3">
                   <img src="/img/tpc-screen-pets.jpg" class="img-fluid rounded-left" alt="screen-pets">
                 </div>
-                <div class="col-md-3 p-1">
+                <div class="col-md-3">
                   <img src="/img/tpc-screen-play.jpg" class="img-fluid rounded-left" alt="screen-play">
                 </div>
               </div>
