implementing tpc.html view

--- a/frontend/games/tpc.html
+++ b/frontend/games/tpc.html
@@ -159,15 +159,10 @@
           <div class="card mb-4">
 
             <div class="row elegant-color-dark">
-
               <div class="col-md-5">
-                <div class="device-container">
-                  <div class="device-mockup iphone6_plus portrait white">
-                    <div class="device">
-                      <div class="screen">
-                        <img src="/img/tpc-screen.jpg" class="img-fluid rounded-left" alt="tpc-screen">
-                      </div>
-                    </div>
+                <div class="device-container device-mockup iphone6_plus portrait white device">
+                  <div class="screen">
+                    <img src="/img/tpc-screen.jpg" class="img-fluid rounded-left" alt="tpc-screen">
                   </div>
                 </div>
               </div>
