--- a/frontend/games/tpc.html
+++ b/frontend/games/tpc.html
@@ -151,87 +151,84 @@
   <!--Main layout-->
   <main class="design px-5">
     <!--Main container-->
-    <div class="container">
-      <div class="container my-5">
+    <div class="container my-5">
 
-        <section class="features" id="features">
+      <section class="features" id="features">
 
-          <div class="card mb-4">
+        <div class="card mb-4">
 
-            <div class="row elegant-color-dark">
+          <div class="row">
 
-              <div class="col-md-5 p-2">
-                <div class="device-container">
-                  <div class="device-mockup iphone6_plus portrait white">
-                    <div class="device">
-                      <div class="screen">
-                        <img src="/img/tpc-screen.jpg" class="img-fluid rounded-left" alt="tpc-screen">
-                      </div>
+            <div class="col-md-5 p-2">
+              <div class="device-container">
+                <div class="device-mockup iphone6_plus portrait white">
+                  <div class="device">
+                    <div class="screen">
+                      <img src="/img/tpc-screen.jpg" class="img-fluid rounded-left" alt="tpc-screen">
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="container">
-                <div class="col-md-3">
-                  <img src="/img/tpc-screen-menu.jpg" class="img-fluid rounded-left" alt="screen-menu">
-                </div>
-                <div class="col-md-3">
-                  <img src="/img/tpc-screen-pets.jpg" class="img-fluid rounded-left" alt="screen-pets">
-                </div>
-                <div class="col-md-3">
-                  <img src="/img/tpc-screen-play.jpg" class="img-fluid rounded-left" alt="screen-play">
-                </div>
+            </div>
+            <div class="container">
+              <div class="col-md-3">
+                <img src="/img/tpc-screen-menu.jpg" class="img-fluid rounded-left" alt="screen-menu">
               </div>
-
-              <div class="col-md-4 p-5 align-self-center">
-
-                <h5 class="font-weight-normal mb-3">Project detail</h5>
-
-                <p class="text-muted">Out or geared it but to best up samples the for she phase of copy would do in divine
-                  of taken and the take medical or upper at him in the logbook were, we price his mostly to commas.</p>
-
-                <ul class="list-unstyled font-small mt-5 mb-0">
-                  <li>
-                    <p class="text-uppercase mb-2"><strong>Client</strong></p>
-                    <p class="text-muted mb-4">Envato Inc.</p>
-                  </li>
-
-                  <li>
-                    <p class="text-uppercase mb-2"><strong>Date</strong></p>
-                    <p class="text-muted mb-4">June 27, 2019</p>
-                  </li>
-
-                  <li>
-                    <p class="text-uppercase mb-2"><strong>Skills</strong></p>
-                    <p class="text-muted mb-4">Design, HTML, CSS, Javascript</p>
-                  </li>
-
-                  <li>
-                    <p class="text-uppercase mb-2"><strong>Address</strong></p>
-                    <a href="https://mdbootstrap.com/docs/jquery/design-blocks/">MDBootstrap</a>
-                  </li>
-
-                  <li>
-                    <p class="text-uppercase mt-4 mb-2"><strong>Share</strong></p>
-                    <div class="d-flex justify-content-start">
-                      <a class="text-muted pr-3" href="#"><i class="fab fa-facebook-f"></i></a>
-                      <a class="text-muted pr-3" href="#"><i class="fab fa-twitter"></i></a>
-                      <a class="text-muted pr-3" href="#"><i class="fab fa-instagram"></i></a>
-                      <a class="text-muted" href="#"><i class="fab fa-dribbble"></i></a>
-                    </div>
-                  </li>
-
-                </ul>
-
+              <div class="col-md-3">
+                <img src="/img/tpc-screen-pets.jpg" class="img-fluid rounded-left" alt="screen-pets">
               </div>
+              <div class="col-md-3">
+                <img src="/img/tpc-screen-play.jpg" class="img-fluid rounded-left" alt="screen-play">
+              </div>
+            </div>
+
+            <div class="col-md-4 p-5 align-self-center">
+
+              <h5 class="font-weight-normal mb-3">Project detail</h5>
+
+              <p class="text-muted">Out or geared it but to best up samples the for she phase of copy would do in divine
+                of taken and the take medical or upper at him in the logbook were, we price his mostly to commas.</p>
+
+              <ul class="list-unstyled font-small mt-5 mb-0">
+                <li>
+                  <p class="text-uppercase mb-2"><strong>Client</strong></p>
+                  <p class="text-muted mb-4">Envato Inc.</p>
+                </li>
+
+                <li>
+                  <p class="text-uppercase mb-2"><strong>Date</strong></p>
+                  <p class="text-muted mb-4">June 27, 2019</p>
+                </li>
+
+                <li>
+                  <p class="text-uppercase mb-2"><strong>Skills</strong></p>
+                  <p class="text-muted mb-4">Design, HTML, CSS, Javascript</p>
+                </li>
+
+                <li>
+                  <p class="text-uppercase mb-2"><strong>Address</strong></p>
+                  <a href="https://mdbootstrap.com/docs/jquery/design-blocks/">MDBootstrap</a>
+                </li>
+
+                <li>
+                  <p class="text-uppercase mt-4 mb-2"><strong>Share</strong></p>
+                  <div class="d-flex justify-content-start">
+                    <a class="text-muted pr-3" href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a class="text-muted pr-3" href="#"><i class="fab fa-twitter"></i></a>
+                    <a class="text-muted pr-3" href="#"><i class="fab fa-instagram"></i></a>
+                    <a class="text-muted" href="#"><i class="fab fa-dribbble"></i></a>
+                  </div>
+                </li>
+
+              </ul>
 
             </div>
 
           </div>
 
-        </section>
+        </div>
 
-      </div>
+      </section>
 
       <div class="container mt-5">
 
