implementing tpc.html view

--- a/frontend/games/tpc.html
+++ b/frontend/games/tpc.html
@@ -162,7 +162,7 @@
 
               <div class="col-md-5 p-2">
                 <div class="device-container">
-                  <div class="device-mockup iphone6_plus portrait">
+                  <div class="device-mockup iphone6_plus portrait gold">
                     <div class="device">
                       <div class="screen">
                         <img src="/img/tpc-screen.jpg" class="img-fluid rounded-left" alt="tpc-screen">
