--- a/frontend/games/tpc.html
+++ b/frontend/games/tpc.html
@@ -158,7 +158,7 @@
 
           <div class="card mb-4">
 
-            <div class="row elegant-color-dark">
+            <div class="row">
 
               <div class="col-md-5 p-2">
                 <div class="device-container">
@@ -172,7 +172,7 @@
                 </div>
               </div>
 
-              <div class="col-md-4 p-5 align-self-center">
+              <div class="col-md-4 p-5 align-self-center elegant-color-dark">
 
                 <h5 class="font-weight-normal mb-3">Project detail</h5>
 
