--- a/frontend/games/tpc.html
+++ b/frontend/games/tpc.html
@@ -160,7 +160,7 @@
 
             <div class="row">
 
-              <div class="col-md-5 p-2">
+              <div class="col-md-6 p-2 elegant-color-dark">
                 <div class="device-container">
                   <div class="device-mockup iphone6_plus portrait gold">
                     <div class="device">
@@ -172,7 +172,7 @@
                 </div>
               </div>
 
-              <div class="col-md-4 p-5 align-self-center elegant-color-dark">
+              <div class="col-md-6 p-5 align-self-center">
 
                 <h5 class="font-weight-normal mb-3">Project detail</h5>
 
