--- a/frontend/games/tpc.html
+++ b/frontend/games/tpc.html
@@ -179,7 +179,7 @@
                 <p class="text-muted">Out or geared it but to best up samples the for she phase of copy would do in divine
                   of taken and the take medical or upper at him in the logbook were, we price his mostly to commas.</p>
 
-                <ul class="list-unstyled font-small mt-5 mb-0">
+                <ul class="list-unstyled font-small mt-5 mb-0 black-text">
                   <li>
                     <p class="text-uppercase mb-2"><strong>Client</strong></p>
                     <p class="text-muted mb-4">Envato Inc.</p>
