implementing tpc.html view

--- a/frontend/games/tpc.html
+++ b/frontend/games/tpc.html
@@ -174,7 +174,7 @@
 
               <div class="col-md-6 p-5 align-self-center">
 
-                <h5 class="font-weight-normal mb-3">Project detail</h5>
+                <h5 class="font-weight-normal mb-3 black-text">Project detail</h5>
 
                 <p class="text-muted">Out or geared it but to best up samples the for she phase of copy would do in divine
                   of taken and the take medical or upper at him in the logbook were, we price his mostly to commas.</p>
