implementing tpc.html view

--- a/frontend/games/tpc.html
+++ b/frontend/games/tpc.html
@@ -160,7 +160,7 @@
 
             <div class="row">
 
-              <div class="col-md-6 p-2 elegant-color-dark">
+              <div class="col-md-6 p-2">
                 <div class="device-container">
                   <div class="device-mockup iphone6_plus portrait gold">
                     <div class="device">
@@ -172,14 +172,14 @@
                 </div>
               </div>
 
-              <div class="col-md-6 p-5 align-self-center">
+              <div class="col-md-6 p-5 align-self-center elegant-color-dark">
 
-                <h5 class="font-weight-normal mb-3 black-text">Project detail</h5>
+                <h5 class="font-weight-normal mb-3 white-text">Project detail</h5>
 
                 <p class="text-muted">Out or geared it but to best up samples the for she phase of copy would do in divine
                   of taken and the take medical or upper at him in the logbook were, we price his mostly to commas.</p>
 
-                <ul class="list-unstyled font-small mt-5 mb-0 black-text">
+                <ul class="list-unstyled font-small mt-5 mb-0 white-text">
                   <li>
                     <p class="text-uppercase mb-2"><strong>Client</strong></p>
                     <p class="text-muted mb-4">Envato Inc.</p>
