--- a/frontend/games/tpc.html
+++ b/frontend/games/tpc.html
@@ -152,18 +152,20 @@
   <main class="design px-5">
     <!--Main container-->
     <div class="container">
+      <!--Game container-->
       <div class="container my-5">
-
+        <!--Section: Content-->
         <section class="features" id="features">
-
+          <!--Card-->
           <div class="card mb-4">
-
+            <!--Grid row-->
             <div class="row">
-
+              <!--Device column-->
               <div class="col-md-6 p-2">
                 <div class="device-container">
                   <div class="device-mockup iphone6_plus portrait gold">
                     <div class="device">
+                      <!--Image-->
                       <div class="screen">
                         <img src="/img/tpc-screen.jpg" class="img-fluid rounded-left" alt="tpc-screen">
                       </div>
@@ -171,56 +173,115 @@
                   </div>
                 </div>
               </div>
+              <!--Device column-->
 
-              <div class="col-md-6 p-5 align-self-center elegant-color-dark">
+              <!--Project detail column-->
+              <div class="col-md-6 p-5 align-self-centers">
 
-                <h5 class="font-weight-normal mb-3 white-text">Project detail</h5>
+                <h5 class="font-weight-normal mb-3 text-white">Project detail</h5>
 
-                <p class="text-muted">Out or geared it but to best up samples the for she phase of copy would do in divine
-                  of taken and the take medical or upper at him in the logbook were, we price his mostly to commas.</p>
+                <p class="text-white">Augmented reality was never as fun as now.
+                  With TPC scans, unlocks, and play.
+                </p>
+                <p class="text-white">This game emerges in September 2019
+                  as an innovative idea to promote the shirts of InkuNeko Mx.
+                </p>
 
-                <ul class="list-unstyled font-small mt-5 mb-0 white-text">
+                <ul class="list-unstyled font-small mt-5 mb-0 text-white">
                   <li>
-                    <p class="text-uppercase mb-2"><strong>Client</strong></p>
-                    <p class="text-muted mb-4">Envato Inc.</p>
+                    <p class="text-uppercase mb-2"><strong>Genre</strong></p>
+                    <p class="mb-4">Simulation</p>
                   </li>
 
                   <li>
-                    <p class="text-uppercase mb-2"><strong>Date</strong></p>
-                    <p class="text-muted mb-4">June 27, 2019</p>
+                    <p class="text-uppercase mb-2"><strong>Release</strong></p>
+                    <p class="mb-4">August 25, 2019</p>
                   </li>
 
                   <li>
-                    <p class="text-uppercase mb-2"><strong>Skills</strong></p>
-                    <p class="text-muted mb-4">Design, HTML, CSS, Javascript</p>
+                    <p class="text-uppercase mb-2"><strong>Mode(s)</strong></p>
+                    <p class="mb-4">Single-player</p>
                   </li>
 
                   <li>
-                    <p class="text-uppercase mb-2"><strong>Address</strong></p>
-                    <a href="https://mdbootstrap.com/docs/jquery/design-blocks/">MDBootstrap</a>
+                    <p class="text-uppercase mb-2"><strong>Platform(s)</strong></p>
+                    <p class="mb-4">Android</p>
                   </li>
 
                   <li>
-                    <p class="text-uppercase mt-4 mb-2"><strong>Share</strong></p>
-                    <div class="d-flex justify-content-start">
-                      <a class="text-muted pr-3" href="#"><i class="fab fa-facebook-f"></i></a>
-                      <a class="text-muted pr-3" href="#"><i class="fab fa-twitter"></i></a>
-                      <a class="text-muted pr-3" href="#"><i class="fab fa-instagram"></i></a>
-                      <a class="text-muted" href="#"><i class="fab fa-dribbble"></i></a>
-                    </div>
+                    <p class="text-uppercase mb-2"><strong>Devloper</strong></p>
+                    <p class="mb-4"><img src="/img/soufunlogo-variant-2-icon.png" height="20" width="60" alt="Logo"></p>
                   </li>
-
                 </ul>
-
               </div>
-
+              <!--Project detail column-->
             </div>
+            <!--Grid row-->
 
+            <!--Carousel-->
+            <div class="container my-5">
+
+              <!--Section: Content-->
+              <section class="text-center dark-grey-text">
+
+                <h3 class="font-weight-bold pb-4 mb-0 text-center">Gallery</h3>
+
+                <!--Grid row-->
+                <div class="row">
+                  <!--Grid column-->
+                  <div class="col-md-12">
+                    <!--Carousel slide-->
+                    <div id="carousel-multi" class="carousel slide carousel-multi-item v-2" data-ride="carousel">
+
+                      <!--Controls-->
+                      <div class="controls-top">
+                        <a class="btn-floating bg-transparent z-depth-0 m-0" href="#carousel-multi" data-slide="prev"><i class="dark-grey-text fas fa-chevron-left"></i></a>
+                        <a class="btn-floating bg-transparent z-depth-0 m-0" href="#carousel-multi" data-slide="next"><i class="dark-grey-text fas fa-chevron-right"></i></a>
+                      </div>
+                      <!--/.Controls-->
+
+                      <!--Images-->
+                      <div class="carousel-inner" role="listbox">
+
+                        <div class="carousel-item active">
+                          <div class="col-12 col-md-6 mb-4 mx-auto">
+                            <div class="view rounded z-depth-1-half">
+                              <img src="/img/tpc-screen-pets.jpg" class="img-fluid rounded" alt="screen-pets">
+                            </div>
+                          </div>
+                        </div>
+                        <div class="carousel-item">
+                          <div class="col-12 col-md-6 mb-4 mx-auto">
+                            <div class="view rounded z-depth-1-half">
+                              <img src="/img/tpc-screen-menu" class="img-fluid rounded" alt="screen-menu">
+                            </div>
+                          </div>
+                        </div>
+                        <div class="carousel-item">
+                          <div class="col-12 col-md-6 mb-4 mx-auto">
+                            <div class="view rounded z-depth-1-half">
+                              <img src="/img/tpc-screen-play" class="img-fluid rounded" alt="screen-play">
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <!--Images-->
+                    </div>
+                    <!--Carousel slide-->
+                  </div>
+                  <!--Grid column-->
+                </div>
+                <!--Grid row-->
+              </section>
+              <!--Section: Content-->
+            </div>
+            <!--Carousel-->
           </div>
-
+          <!--Card-->
         </section>
-
+        <!--Section: Content-->
       </div>
+      <!--Game container-->
 
       <div class="container mt-5">
 
@@ -382,8 +443,7 @@
   <script type="text/javascript" src="/js/jquery-easing.min.js"></script>
   <!-- Custom scripts (optional) -->
   <script type="text/javascript" src="/js/new-age.min.js"></script>
-
-  </script>
+  <script type="text/javascript" src="/js/carousel-multi.js"></script>
 
 
 </body>
