--- a/frontend/games/tpc.html
+++ b/frontend/games/tpc.html
@@ -152,6 +152,7 @@
   <main class="design px-5">
     <!--Main container-->
     <div class="container">
+
       <!--Game container-->
       <div class="container my-5">
         <!--Section: Content-->
@@ -178,16 +179,16 @@
               <!--Project detail column-->
               <div class="col-md-6 p-5 align-self-centers">
 
-                <h5 class="font-weight-normal mb-3 text-white">Project detail</h5>
+                <h5 class="font-weight-normal mb-3 text-black">Project detail</h5>
 
-                <p class="text-white">Augmented reality was never as fun as now.
+                <p class="text-black">Augmented reality was never as fun as now.
                   With TPC scans, unlocks, and play.
                 </p>
-                <p class="text-white">This game emerges in September 2019
+                <p class="text-black">This game emerges in September 2019
                   as an innovative idea to promote the shirts of InkuNeko Mx.
                 </p>
 
-                <ul class="list-unstyled font-small mt-5 mb-0 text-white">
+                <ul class="list-unstyled font-small mt-5 mb-0 text-black">
                   <li>
                     <p class="text-uppercase mb-2"><strong>Genre</strong></p>
                     <p class="mb-4">Simulation</p>
@@ -210,7 +211,7 @@
 
                   <li>
                     <p class="text-uppercase mb-2"><strong>Devloper</strong></p>
-                    <p class="mb-4"><img src="/img/soufunlogo-variant-2-icon.png" height="20" width="60" alt="Logo"></p>
+                    <p class="mb-4"><img src="/img/soufunlogo-variant-1-icon.png" height="20" width="60" alt="Logo"></p>
                   </li>
                 </ul>
               </div>
@@ -246,21 +247,21 @@
                         <div class="carousel-item active">
                           <div class="col-12 col-md-6 mb-4 mx-auto">
                             <div class="view rounded z-depth-1-half">
-                              <img src="/img/tpc-screen-pets.jpg" class="img-fluid rounded" alt="screen-pets">
+                              <img src="/img/tpc-screen-pets.jpg" class="img-fluid rounded" height="40px" alt="screen-pets">
                             </div>
                           </div>
                         </div>
                         <div class="carousel-item">
                           <div class="col-12 col-md-6 mb-4 mx-auto">
                             <div class="view rounded z-depth-1-half">
-                              <img src="/img/tpc-screen-menu" class="img-fluid rounded" alt="screen-menu">
+                              <img src="/img/tpc-screen-menu.jpg" class="img-fluid rounded" height="40px" alt="screen-menu">
                             </div>
                           </div>
                         </div>
                         <div class="carousel-item">
                           <div class="col-12 col-md-6 mb-4 mx-auto">
                             <div class="view rounded z-depth-1-half">
-                              <img src="/img/tpc-screen-play" class="img-fluid rounded" alt="screen-play">
+                              <img src="/img/tpc-screen-play.jpg" class="img-fluid rounded" height="40px" alt="screen-play">
                             </div>
                           </div>
                         </div>
