implementing tpc.html view

--- a/frontend/games/tpc.html
+++ b/frontend/games/tpc.html
@@ -179,16 +179,16 @@
               <!--Project detail column-->
               <div class="col-md-6 p-5 align-self-centers">
 
-                <h5 class="font-weight-normal mb-3 text-black">Project detail</h5>
+                <h5 class="font-weight-normal mb-3 text-dark">Project detail</h5>
 
-                <p class="text-black">Augmented reality was never as fun as now.
+                <p class="text-dark">Augmented reality was never as fun as now.
                   With TPC scans, unlocks, and play.
                 </p>
-                <p class="text-black">This game emerges in September 2019
+                <p class="text-dark">This game emerges in September 2019
                   as an innovative idea to promote the shirts of InkuNeko Mx.
                 </p>
 
-                <ul class="list-unstyled font-small mt-5 mb-0 text-black">
+                <ul class="list-unstyled font-small mt-5 mb-0 text-dark">
                   <li>
                     <p class="text-uppercase mb-2"><strong>Genre</strong></p>
                     <p class="mb-4">Simulation</p>
