implementing tpc.html view

--- a/frontend/games/tpc.html
+++ b/frontend/games/tpc.html
@@ -179,16 +179,16 @@
               <!--Project detail column-->
               <div class="col-md-6 p-5 align-self-centers">
 
-                <h5 class="font-weight-normal mb-3 text-dark">Project detail</h5>
+                <h5 class="font-weight-normal mb-3 dark-grey-text">Project detail</h5>
 
-                <p class="text-dark">Augmented reality was never as fun as now.
+                <p class="dark-grey-text">Augmented reality was never as fun as now.
                   With TPC scans, unlocks, and play.
                 </p>
-                <p class="text-dark">This game emerges in September 2019
+                <p class="dark-grey-text">This game emerges in September 2019
                   as an innovative idea to promote the shirts of InkuNeko Mx.
                 </p>
 
-                <ul class="list-unstyled font-small mt-5 mb-0 text-dark">
+                <ul class="list-unstyled font-small mt-5 mb-0 dark-grey-text">
                   <li>
                     <p class="text-uppercase mb-2"><strong>Genre</strong></p>
                     <p class="mb-4">Simulation</p>
@@ -247,21 +247,21 @@
                         <div class="carousel-item active">
                           <div class="col-12 col-md-6 mb-4 mx-auto">
                             <div class="view rounded z-depth-1-half">
-                              <img src="/img/tpc-screen-pets.jpg" class="img-fluid rounded" height="40px" alt="screen-pets">
+                              <img src="/img/tpc-screen-pets.jpg" class="rounded" height="80px" alt="screen-pets">
                             </div>
                           </div>
                         </div>
                         <div class="carousel-item">
                           <div class="col-12 col-md-6 mb-4 mx-auto">
                             <div class="view rounded z-depth-1-half">
-                              <img src="/img/tpc-screen-menu.jpg" class="img-fluid rounded" height="40px" alt="screen-menu">
+                              <img src="/img/tpc-screen-menu.jpg" class="rounded" height="80px" alt="screen-menu">
                             </div>
                           </div>
                         </div>
                         <div class="carousel-item">
                           <div class="col-12 col-md-6 mb-4 mx-auto">
                             <div class="view rounded z-depth-1-half">
-                              <img src="/img/tpc-screen-play.jpg" class="img-fluid rounded" height="40px" alt="screen-play">
+                              <img src="/img/tpc-screen-play.jpg" class="rounded" height="80px" alt="screen-play">
                             </div>
                           </div>
                         </div>
