--- a/frontend/games/tpc.html
+++ b/frontend/games/tpc.html
@@ -230,7 +230,7 @@
                 <!--Grid row-->
                 <div class="row">
                   <!--Grid column-->
-                  <div class="col-md-8">
+                  <div class="col-md-8 justify-content-center">
                     <!--Carousel slide-->
                     <div id="carousel-multi" class="carousel slide carousel-multi-item v-2" data-ride="carousel">
 
