--- a/frontend/games/tpc.html
+++ b/frontend/games/tpc.html
@@ -228,9 +228,9 @@
                 <h3 class="font-weight-bold pb-4 mb-0 text-center">Gallery</h3>
 
                 <!--Grid row-->
-                <div class="row">
+                <div class="row d-flex justify-content-center">
                   <!--Grid column-->
-                  <div class="col-md-8 justify-content-center">
+                  <div class="col-md-8">
                     <!--Carousel slide-->
                     <div id="carousel-multi" class="carousel slide carousel-multi-item v-2" data-ride="carousel">
 
