implementing tpc.html view

--- a/frontend/games/tpc.html
+++ b/frontend/games/tpc.html
@@ -261,7 +261,7 @@
                         <div class="carousel-item">
                           <div class="col-12 col-md-6 mb-4 mx-auto">
                             <div class="view rounded z-depth-1-half">
-                              <img src="/img/tpc-screen-play.jpg" class="rounded" height="80px" alt="screen-play">
+                              <img src="/img/tpc-screen-play1.jpg" class="img-fluid rounded" alt="screen-play">
                             </div>
                           </div>
                         </div>
