implementing tpc.html view

--- a/frontend/games/tpc.html
+++ b/frontend/games/tpc.html
@@ -246,8 +246,9 @@
 
                         <div class="carousel-item active">
                           <div class="col-12 col-md-6 mb-4 mx-auto">
-                            <div class="view rounded z-depth-1-half">
+                            <div class="view overlay view rounded z-depth-1-half">
                               <img src="/img/tpc-screen-pets.jpg" class="img-fluid rounded" alt="screen-pets">
+                              <div class="mask rgba-white-light"></div>
                             </div>
                           </div>
                         </div>
