implementing tpc.html view

--- a/frontend/games/tpc.html
+++ b/frontend/games/tpc.html
@@ -248,21 +248,23 @@
                           <div class="col-12 col-md-6 mb-4 mx-auto">
                             <div class="view overlay view rounded z-depth-1-half">
                               <img src="/img/tpc-screen-pets.jpg" class="img-fluid rounded" alt="screen-pets">
-                              <div class="mask rgba-white-light"></div>
+                              <div class="mask rgba-white-slight"></div>
                             </div>
                           </div>
                         </div>
                         <div class="carousel-item">
                           <div class="col-12 col-md-6 mb-4 mx-auto">
-                            <div class="view rounded z-depth-1-half">
+                            <div class="view overlay view rounded z-depth-1-half">
                               <img src="/img/tpc-screen-menu.jpg" class="img-fluid rounded" alt="screen-menu">
+                              <div class="mask rgba-white-slight"></div>
                             </div>
                           </div>
                         </div>
                         <div class="carousel-item">
                           <div class="col-12 col-md-6 mb-4 mx-auto">
-                            <div class="view rounded z-depth-1-half">
+                            <div class="view overlay view rounded z-depth-1-half">
                               <img src="/img/tpc-screen-play.jpg" class="img-fluid rounded" alt="screen-play">
+                              <div class="mask rgba-white-slight"></div>
                             </div>
                           </div>
                         </div>
