implementing tpc.html view

--- a/frontend/games/tpc.html
+++ b/frontend/games/tpc.html
@@ -220,12 +220,10 @@
             <!--Grid row-->
 
             <!--Carousel-->
-            <div class="container my-5">
+            <div class="container my-5 elegant-color-dark">
 
               <!--Section: Content-->
-              <section class="text-center dark-grey-text">
-
-                <h3 class="font-weight-bold pb-4 mb-0 text-center">Gallery</h3>
+              <section class="text-center text-white">
 
                 <!--Grid row-->
                 <div class="row d-flex justify-content-center">
@@ -236,8 +234,8 @@
 
                       <!--Controls-->
                       <div class="controls-top">
-                        <a class="btn-floating bg-transparent z-depth-0 m-0" href="#carousel-multi" data-slide="prev"><i class="dark-grey-text fas fa-chevron-left"></i></a>
-                        <a class="btn-floating bg-transparent z-depth-0 m-0" href="#carousel-multi" data-slide="next"><i class="dark-grey-text fas fa-chevron-right"></i></a>
+                        <a class="btn-floating bg-transparent z-depth-0 m-0" href="#carousel-multi" data-slide="prev"><i class="text-white fas fa-chevron-left"></i></a>
+                        <a class="btn-floating bg-transparent z-depth-0 m-0" href="#carousel-multi" data-slide="next"><i class="text-white fas fa-chevron-right"></i></a>
                       </div>
                       <!--/.Controls-->
 
