implementing tpc.html view

--- a/frontend/games/tpc.html
+++ b/frontend/games/tpc.html
@@ -220,10 +220,10 @@
             <!--Grid row-->
 
             <!--Carousel-->
-            <div class="container my-5 elegant-color-dark">
+            <div class="container my-5">
 
               <!--Section: Content-->
-              <section class="text-center text-white">
+              <section class="text-center dark-grey-text">
 
                 <!--Grid row-->
                 <div class="row d-flex justify-content-center">
@@ -231,13 +231,6 @@
                   <div class="col-md-6">
                     <!--Carousel slide-->
                     <div id="carousel-multi" class="carousel slide carousel-multi-item v-2" data-ride="carousel">
-
-                      <!--Controls-->
-                      <div class="controls-top">
-                        <a class="btn-floating bg-transparent z-depth-0 m-0" href="#carousel-multi" data-slide="prev"><i class="text-white fas fa-chevron-left"></i></a>
-                        <a class="btn-floating bg-transparent z-depth-0 m-0" href="#carousel-multi" data-slide="next"><i class="text-white fas fa-chevron-right"></i></a>
-                      </div>
-                      <!--/.Controls-->
 
                       <!--Images-->
                       <div class="carousel-inner" role="listbox">
