implementing tpc.html view

--- a/frontend/games/tpc.html
+++ b/frontend/games/tpc.html
@@ -150,15 +150,18 @@
 
   <!--Main layout-->
   <main class="design px-5">
+
     <!--Main container-->
     <div class="container">
 
       <!--Game container-->
       <div class="container my-5">
+
         <!--Section: Content-->
         <section class="features" id="features">
           <!--Card-->
           <div class="card mb-4">
+
             <!--Grid row-->
             <div class="row">
               <!--Device column-->
@@ -187,26 +190,25 @@
                 <p class="dark-grey-text">This game emerges in September 2019
                   as an innovative idea to promote the shirts of InkuNeko Mx.
                 </p>
-
-                <ul class="list-unstyled font-small mt-5 mb-0 dark-grey-text">
+                <ul class="list-unstyled font-small mt-5 mb-0">
                   <li>
-                    <p class="text-uppercase mb-2"><strong>Genre</strong></p>
-                    <p class="mb-4">Simulation</p>
+                    <p class="text-uppercase mb-2 text-dark"><strong>Genre</strong></p>
+                    <p class="mb-4 dark-grey-text">Simulation</p>
                   </li>
 
                   <li>
-                    <p class="text-uppercase mb-2"><strong>Release</strong></p>
-                    <p class="mb-4">August 25, 2019</p>
+                    <p class="text-uppercase mb-2 text-dark"><strong>Release</strong></p>
+                    <p class="mb-4 dark-grey-text">August 25, 2019</p>
                   </li>
 
                   <li>
-                    <p class="text-uppercase mb-2"><strong>Mode(s)</strong></p>
-                    <p class="mb-4">Single-player</p>
+                    <p class="text-uppercase mb-2 text-dark"><strong>Mode(s)</strong></p>
+                    <p class="mb-4 dark-grey-text">Single-player</p>
                   </li>
 
                   <li>
-                    <p class="text-uppercase mb-2"><strong>Platform(s)</strong></p>
-                    <p class="mb-4">Android</p>
+                    <p class="text-uppercase mb-2 text-dark"><strong>Platform(s)</strong></p>
+                    <p class="mb-4 dark-grey-text">Android</p>
                   </li>
 
                   <li>
@@ -221,9 +223,8 @@
 
             <!--Carousel-->
             <div class="container my-5">
-
               <!--Section: Content-->
-              <section class="text-center dark-grey-text">
+              <section class="text-center">
 
                 <!--Grid row-->
                 <div class="row d-flex justify-content-center">
@@ -231,10 +232,8 @@
                   <div class="col-md-6">
                     <!--Carousel slide-->
                     <div id="carousel-multi" class="carousel slide carousel-multi-item v-2" data-ride="carousel">
-
                       <!--Images-->
                       <div class="carousel-inner" role="listbox">
-
                         <div class="carousel-item active">
                           <div class="col-12 col-md-6 mb-4 mx-auto">
                             <div class="view overlay view rounded z-depth-1-half">
@@ -267,6 +266,7 @@
                   <!--Grid column-->
                 </div>
                 <!--Grid row-->
+
               </section>
               <!--Section: Content-->
             </div>
@@ -279,7 +279,6 @@
       <!--Game container-->
 
       <div class="container mt-5">
-
 
         <!--Section: Content-->
         <section>
