implementing tpc.html view

--- a/frontend/games/tpc.html
+++ b/frontend/games/tpc.html
@@ -182,7 +182,7 @@
               <!--Project detail column-->
               <div class="col-md-6 p-5 align-self-centers">
 
-                <h5 class="font-weight-normal mb-3 dark-grey-text">Project detail</h5>
+                <h5 class="font-weight-normal mb-3 text-dark"><strong>Project detail</strong></h5>
 
                 <p class="dark-grey-text">Augmented reality was never as fun as now.
                   With TPC scans, unlocks, and play.
@@ -212,7 +212,7 @@
                   </li>
 
                   <li>
-                    <p class="text-uppercase mb-2"><strong>Devloper</strong></p>
+                    <p class="text-uppercase mb-2 text-dark"><strong>Devloper</strong></p>
                     <p class="mb-4"><img src="/img/soufunlogo-variant-1-icon.png" height="20" width="60" alt="Logo"></p>
                   </li>
                 </ul>
@@ -222,7 +222,7 @@
             <!--Grid row-->
 
             <!--Carousel-->
-            <div class="container my-5">
+            <div class="container my-3">
               <!--Section: Content-->
               <section class="text-center">
 
