implementing tpc.html view

--- a/frontend/games/tpc.html
+++ b/frontend/games/tpc.html
@@ -182,7 +182,7 @@
               <!--Project detail column-->
               <div class="col-md-6 p-5 align-self-centers">
 
-                <h5 class="font-weight-normal mb-3 text-dark"><strong>Project detail</strong></h5>
+                <h5 class="font-weight-normal mb-3 text-dark"><strong>Tiny Pets Collector</strong></h5>
 
                 <p class="dark-grey-text">Augmented reality was never as fun as now.
                   With TPC scans, unlocks, and play.
