--- a/frontend/games/tpc.html
+++ b/frontend/games/tpc.html
@@ -170,8 +170,9 @@
                   <div class="device-mockup iphone6_plus portrait gold">
                     <div class="device">
                       <!--Image-->
-                      <div class="screen">
+                      <div class=" view overlay screen">
                         <img src="/img/tpc-screen.jpg" class="img-fluid rounded-left" alt="tpc-screen">
+                        <div class="mask rgba-white-slight"></div>
                       </div>
                     </div>
                   </div>
@@ -213,7 +214,7 @@
 
                   <li>
                     <p class="text-uppercase mb-2 text-dark"><strong>Devloper</strong></p>
-                    <p class="mb-4"><img src="/img/soufunlogo-variant-1-icon.png" height="20" width="60" alt="Logo"></p>
+                    <p class="mb-4"><img src="/img/soufunlogo-variant-1-icon.png" height="40" width="80" alt="Logo"></p>
                   </li>
                 </ul>
               </div>
@@ -278,6 +279,7 @@
       </div>
       <!--Game container-->
 
+      <!--Download game container-->
       <div class="container mt-5">
 
         <!--Section: Content-->
@@ -285,6 +287,19 @@
 
           <!-- Grid row -->
           <div class="row">
+
+            <!-- Grid column -->
+            <div class="col-lg-7 mb-4 align-self-center text-center text-lg-left">
+
+              <h2 class="h2 mb-4">Now Available</h2>
+              <p class="text-muted mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, error amet numquam iure provident voluptate esse quasi, veritatis totam voluptas nostrum quisquam eum porro a pariatur veniam. Fugit, error amet
+                numquam iure provident voluptate esse quasi.</p>
+
+              <button type="button" class="btn btn-outline-dark waves-effect btn-md ml-lg-0"><i class="fab fa-apple fa-lg pr-1"></i> App Store</button>
+              <button type="button" class="btn btn-outline-dark waves-effect btn-md"><i class="fab fa-google-play fa-lg pr-1"></i> Google Play</button>
+
+            </div>
+            <!-- Grid column -->
 
             <!-- Grid column -->
             <div class="col-lg-5 mb-4">
@@ -300,28 +315,14 @@
             </div>
             <!-- Grid column -->
 
-            <!-- Grid column -->
-            <div class="col-lg-7 mb-4 align-self-center text-center text-lg-left">
-
-              <h2 class="h2 mb-4">Now Available</h2>
-              <p class="text-muted mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, error amet numquam iure provident voluptate esse quasi, veritatis totam voluptas nostrum quisquam eum porro a pariatur veniam. Fugit, error amet
-                numquam iure provident voluptate esse quasi.</p>
-
-              <button type="button" class="btn btn-outline-dark waves-effect btn-md ml-lg-0"><i class="fab fa-apple fa-lg pr-1"></i> App Store</button>
-              <button type="button" class="btn btn-outline-dark waves-effect btn-md"><i class="fab fa-google-play fa-lg pr-1"></i> Google Play</button>
-
-            </div>
-            <!-- Grid column -->
-
           </div>
           <!-- Grid row -->
 
         </section>
         <!--Section: Content-->
 
-
       </div>
-
+      <!--Download game container-->
 
     </div>
     <!--Main container-->
