--- a/frontend/games/tpc.html
+++ b/frontend/games/tpc.html
@@ -214,7 +214,7 @@
 
                   <li>
                     <p class="text-uppercase mb-2 text-dark"><strong>Devloper</strong></p>
-                    <p class="mb-4"><img src="/img/soufunlogo-variant-1-icon.png" height="40" width="80" alt="Logo"></p>
+                    <p class="mb-4"><img src="/img/soufunlogo-variant-1-icon.png" height="20" width="60" alt="Logo"></p>
                   </li>
                 </ul>
               </div>
@@ -285,38 +285,43 @@
         <!--Section: Content-->
         <section>
 
-          <!-- Grid row -->
-          <div class="row">
+          <!--Card-->
+          <div class="card mb-4">
+            <!-- Grid row -->
+            <div class="row">
 
-            <!-- Grid column -->
-            <div class="col-lg-7 mb-4 align-self-center text-center text-lg-left">
+              <!-- Grid column -->
+              <div class="col-lg-7 mb-4 align-self-center text-center text-lg-left">
 
-              <h2 class="h2 mb-4">Now Available</h2>
-              <p class="text-muted mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, error amet numquam iure provident voluptate esse quasi, veritatis totam voluptas nostrum quisquam eum porro a pariatur veniam. Fugit, error amet
-                numquam iure provident voluptate esse quasi.</p>
+                <h2 class="h2 mb-4">Now Available</h2>
+                <p class="text-muted mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, error amet numquam iure provident voluptate esse quasi, veritatis totam voluptas nostrum quisquam eum porro a pariatur veniam. Fugit, error
+                  amet
+                  numquam iure provident voluptate esse quasi.</p>
 
-              <button type="button" class="btn btn-outline-dark waves-effect btn-md ml-lg-0"><i class="fab fa-apple fa-lg pr-1"></i> App Store</button>
-              <button type="button" class="btn btn-outline-dark waves-effect btn-md"><i class="fab fa-google-play fa-lg pr-1"></i> Google Play</button>
+                <button type="button" class="btn btn-outline-dark waves-effect btn-md ml-lg-0"><i class="fab fa-apple fa-lg pr-1"></i> App Store</button>
+                <button type="button" class="btn btn-outline-dark waves-effect btn-md"><i class="fab fa-google-play fa-lg pr-1"></i> Google Play</button>
 
-            </div>
-            <!-- Grid column -->
-
-            <!-- Grid column -->
-            <div class="col-lg-5 mb-4">
-
-              <!-- Featured image -->
-              <div class="view overlay mb-4">
-                <img class="img-fluid mx-auto" src="https://mdbootstrap.com/img/Mockups/Transparent/Small/iphone-admin.png" alt="Sample image">
-                <a>
-                  <div class="mask rgba-white-slight"></div>
-                </a>
               </div>
+              <!-- Grid column -->
+
+              <!-- Grid column -->
+              <div class="col-lg-5 mb-4">
+
+                <!-- Featured image -->
+                <div class="view overlay mb-4">
+                  <img class="img-fluid mx-auto" src="https://mdbootstrap.com/img/Mockups/Transparent/Small/iphone-admin.png" alt="Sample image">
+                  <a>
+                    <div class="mask rgba-white-slight"></div>
+                  </a>
+                </div>
+
+              </div>
+              <!-- Grid column -->
 
             </div>
-            <!-- Grid column -->
-
+            <!-- Grid row -->
           </div>
-          <!-- Grid row -->
+          <!--Card-->
 
         </section>
         <!--Section: Content-->
