--- a/frontend/games/tpc.html
+++ b/frontend/games/tpc.html
@@ -180,7 +180,7 @@
               </div>
               <!--Device column-->
 
-              <!--Project detail column-->
+              <!--Game detail column-->
               <div class="col-md-6 p-5 align-self-centers">
 
                 <h5 class="font-weight-normal mb-3 text-dark"><strong>Tiny Pets Collector</strong></h5>
@@ -218,7 +218,7 @@
                   </li>
                 </ul>
               </div>
-              <!--Project detail column-->
+              <!--Game detail column-->
             </div>
             <!--Grid row-->
 
@@ -291,10 +291,11 @@
             <div class="row">
 
               <!-- Grid column -->
-              <div class="col-lg-7 mb-4 align-self-center text-center text-lg-left">
+              <div class="col-md-6 p-5 align-self-centers">
 
-                <h2 class="h2 mb-4">Now Available</h2>
-                <p class="text-muted mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, error amet numquam iure provident voluptate esse quasi, veritatis totam voluptas nostrum quisquam eum porro a pariatur veniam. Fugit, error
+                <h2 class="h2 mb-4 text-dark">Now Available</h2>
+                <p class="mb-4 dark-grey-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, error amet numquam iure provident voluptate esse quasi, veritatis totam voluptas nostrum quisquam eum porro a pariatur veniam. Fugit,
+                  error
                   amet
                   numquam iure provident voluptate esse quasi.</p>
 
@@ -305,7 +306,7 @@
               <!-- Grid column -->
 
               <!-- Grid column -->
-              <div class="col-lg-5 mb-4">
+              <div class="col-md-6 p-2">
 
                 <!-- Featured image -->
                 <div class="view overlay mb-4">
