implementing tpc.html view

--- a/frontend/games/tpc.html
+++ b/frontend/games/tpc.html
@@ -283,12 +283,12 @@
       <div class="container mt-5">
 
         <!--Section: Content-->
-        <section>
+        <section class="features" id="features">
 
           <!--Card-->
           <div class="card mb-4">
             <!-- Grid row -->
-            <div class="row">
+            <div class="row d-flex justify-content-center">
 
               <!-- Grid column -->
               <div class="col-md-6 p-5 align-self-centers">
@@ -305,19 +305,20 @@
               </div>
               <!-- Grid column -->
 
-              <!-- Grid column -->
+              <!--Device column-->
               <div class="col-md-6 p-2">
-
-                <!-- Featured image -->
-                <div class="view overlay mb-4">
-                  <img class="img-fluid mx-auto" src="https://mdbootstrap.com/img/Mockups/Transparent/Small/iphone-admin.png" alt="Sample image">
-                  <a>
-                    <div class="mask rgba-white-slight"></div>
-                  </a>
+                <div class="device-container">
+                  <div class="device-mockup iphone6_plus portrait gold">
+                    <div class="device">
+                      <!--Image-->
+                      <div class="screen">
+                        <img src="/img/tpc-screen.jpg" class="img-fluid rounded-left" alt="tpc-screen">
+                      </div>
+                    </div>
+                  </div>
                 </div>
-
               </div>
-              <!-- Grid column -->
+              <!--Device column-->
 
             </div>
             <!-- Grid row -->
