implementing tpc.html view

--- a/frontend/games/tpc.html
+++ b/frontend/games/tpc.html
@@ -308,12 +308,13 @@
               <!--Device column-->
               <div class="col-md-6 p-2">
                 <div class="device-container">
-                  <div class="device-mockup iphone6_plus portrait gold">
+                  <div class="device-mockup iphone6_plus portrait black">
                     <div class="device">
-                      <!--Image-->
-                      <div class="screen">
-                        <img src="/img/tpc-screen.jpg" class="img-fluid rounded-left" alt="tpc-screen">
-                      </div>
+                      <!--Video source-->
+                      <video class="video-fluid" autoplay loop muted>
+                        <source src="/video/tpc.webm" type="video/webm" />
+                      </video>
+                      <div class="mask rgba-indigo-light"></div>
                     </div>
                   </div>
                 </div>
