implementing tpc.html view

--- a/frontend/games/tpc.html
+++ b/frontend/games/tpc.html
@@ -308,13 +308,10 @@
               <!--Device column-->
               <div class="col-md-6 p-2">
                 <div class="device-container">
-                  <div class="device-mockup iphone6_plus portrait black">
-                    <div class="device">
+                  <div class="device-mockup iphone6_plus portrait gold">
+                    <div class="device video-fluid" autoplay loop muted>
                       <!--Video source-->
-                      <video class="video-fluid" autoplay loop muted>
-                        <source src="/video/tpc.webm" type="video/webm" />
-                      </video>
-                      <div class="mask rgba-indigo-light"></div>
+                      <source src="/video/tpc.webm" type="video/webm" />
                     </div>
                   </div>
                 </div>
