implementing tpc.html view

--- a/frontend/games/tpc.html
+++ b/frontend/games/tpc.html
@@ -309,9 +309,11 @@
               <div class="col-md-6 p-2">
                 <div class="device-container">
                   <div class="device-mockup iphone6_plus portrait gold">
-                    <div class="device video-fluid" autoplay loop muted>
+                    <div class="device">
                       <!--Video source-->
-                      <source src="/video/tpc.webm" type="video/webm" />
+                      <video class="video-fluid" autoplay loop controls muted>
+                        <source src="/video/tpc.webm" type="video/webm" />
+                      </video>
                     </div>
                   </div>
                 </div>
