implementing tpc.html view

--- a/frontend/games/tpc.html
+++ b/frontend/games/tpc.html
@@ -308,12 +308,13 @@
               <!--Device column-->
               <div class="col-md-6 p-2">
                 <div class="device-container">
-                  <div class="device-mockup iphone6_plus portrait gold">
+                  <div class="device-mockup iphone6_plus portrait gold>>>">
                     <div class="device">
-                      <!--Video source-->
-                      <!-- 16:9 aspect ratio -->
-                      <div class="embed-responsive embed-responsive-16by9">
-                        <iframe class="embed-responsive-item" src="/video/tpc.webm" allowfullscreen></iframe>
+                      <!--Image-->
+                      <div class="screen">
+                        <video class="video-fluid z-depth-1" autoplay loop controls muted>
+                          <source src="/video/tpc.webm" type="video/webm" />
+                        </video>
                       </div>
                     </div>
                   </div>
