implementing tpc.html view

--- a/frontend/games/tpc.html
+++ b/frontend/games/tpc.html
@@ -308,9 +308,9 @@
               <!--Device column-->
               <div class="col-md-6 p-2">
                 <div class="device-container">
-                  <div class="device-mockup iphone6_plus portrait gold>>>">
+                  <div class="device-mockup iphone6_plus portrait gold">
                     <div class="device">
-                      <!--Image-->
+                      <!--Video-->
                       <div class="screen">
                         <video class="video-fluid z-depth-1" autoplay loop controls muted>
                           <source src="/video/tpc.webm" type="video/webm" />
